# log_parser

./: .gitignore  README.md  main.py  pyproject.toml
report/: report.json
src/log_analyzer/: models.py  parser.py  reporter.py
tests/: test_parser.py  test_reporter.py
